# rend3-egui-subrendering

./: Cargo.toml
src/: main.rs  rendering.rs
