[package]
resolver = "2"
name = "r3e"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.18.0"
egui_winit_platform = "0.15"
rend3 = { git = "https://github.com/BVE-Reborn/rend3", version = "^0.3.0", branch = "trunk" }
rend3-routine = { git = "https://github.com/BVE-Reborn/rend3", version = "^0.3.0", branch = "trunk" }
rend3-egui = { git = "https://github.com/BVE-Reborn/rend3", version = "^0.3.0", branch = "trunk" }
winit = "0.26"
pollster = "0.2.5"
glam = "0.21.3"
wgpu = "0.13.1"
raw-window-handle = "0.5.0"